parser.output
Terminals unused in grammar

   T_EXPONENCIACION
   T_NEGACION
   T_CORCHETE_IZQUIERDO
   T_CORCHETE_DERECHO
   T_DOS_PUNTOS
   T_MODULO
   T_DIVISION_ENTERA
   T_IGUAL
   T_A
   T_DISTINTO
   T_DE
   T_NO
   T_SINO
   T_HAGA
   T_INFINITAS
   T_VECES
   T_RETORNA
   T_RETORNAR
   T_DEFINIR


Grammar

    0 $accept: programa $end

    1 programa: declaracion_sensores_motores declaracion_funciones instrucciones

    2 declaracion_funciones: /* empty */
    3                      | T_FUNCION id_variable T_PARENTESIS_IZQUIERDO T_PARENTESIS_DERECHO T_FIN T_FUNCION

    4 declaracion_sensores_motores: /* empty */
    5                             | T_UTILIZAR id_variable T_COMO id_variable T_EN id_variable

    6 instrucciones: /* empty */
    7              | instruccion instrucciones

    8 instruccion: instruccion_si
    9            | instruccion_caso
   10            | instruccion_mientras
   11            | instruccion_para
   12            | instruccion_repetir
   13            | instruccion_asignacion
   14            | instruccion_repita_desde
   15            | instruccion_para_cada
   16            | instruccion_repita

   17 $@1: /* empty */

   18 instruccion_si: T_SI relacionales $@1 T_ENTONCES instrucciones T_FIN T_SI

   19 instruccion_caso: T_CASO T_FIN T_CASO

   20 instruccion_mientras: T_MIENTRAS relacionales T_EJECUTE instrucciones T_FIN T_MIENTRAS

   21 instruccion_para: T_PARA instruccion_asignacion T_HASTA relacionales T_EJECUTE instrucciones T_FIN T_PARA

   22 instruccion_repetir: T_REPETIR relacionales instrucciones T_FIN T_REPETIR

   23 instruccion_asignacion: id_variable T_SIMBOLO_IGUAL relacionales

   24 instruccion_repita_desde: T_REPITA T_DESDE relacionales T_HASTA relacionales T_EJECUTE instrucciones T_FIN T_REPITA

   25 instruccion_para_cada: T_PARA T_CADA relacionales T_EN relacionales T_EJECUTE instrucciones T_FIN T_PARA T_CADA

   26 instruccion_repita: T_REPITA instruccion T_MIENTRAS relacionales T_FIN T_REPITA

   27 relacionales: relacionales T_MENOR expresiones
   28             | relacionales T_MAYOR expresiones
   29             | relacionales T_MAYOR_IGUAL expresiones
   30             | relacionales T_MENOR_IGUAL expresiones
   31             | relacionales T_IGUALDAD expresiones
   32             | relacionales T_DESIGUALDAD expresiones
   33             | expresiones

   34 expresiones: expresiones T_SUMA factores
   35            | expresiones T_RESTA factores
   36            | expresiones T_OPERADOR_O factores
   37            | expresiones T_SIMBOLO_OPERADOR_O factores
   38            | factores

   39 factores: factores T_MULTIPLICACION terminales
   40         | factores T_DIVISION terminales
   41         | factores T_OPERADOR_Y terminales
   42         | factores T_SIMBOLO_OPERADOR_Y terminales
   43         | factores T_SIMBOLO_MODULO terminales
   44         | terminales

   45 terminales: T_PARENTESIS_IZQUIERDO relacionales T_PARENTESIS_DERECHO
   46           | literales
   47           | id_variable

   48 id_variable: T_IDENTIFICADOR

   49 literal_booleana: T_VERDADERO
   50                 | T_FALSO

   51 literales: literal_booleana
   52          | T_LITERAL_NUMERICA
   53          | T_LITERAL_CARACTER
   54          | T_LITERAL_FLOTANTE
   55          | T_LITERAL_CADENA


Terminals, with rules where they appear

$end (0) 0
error (256)
T_IDENTIFICADOR (258) 48
T_SIMBOLO_IGUAL (259) 23
T_SUMA (260) 34
T_RESTA (261) 35
T_MULTIPLICACION (262) 39
T_DIVISION (263) 40
T_SIMBOLO_MODULO (264) 43
T_EXPONENCIACION (265)
T_MAYOR_IGUAL (266) 29
T_MENOR_IGUAL (267) 30
T_MENOR (268) 27
T_MAYOR (269) 28
T_IGUALDAD (270) 31
T_NEGACION (271)
T_SIMBOLO_OPERADOR_Y (272) 42
T_SIMBOLO_OPERADOR_O (273) 37
T_CORCHETE_IZQUIERDO (274)
T_CORCHETE_DERECHO (275)
T_PARENTESIS_IZQUIERDO (276) 3 45
T_PARENTESIS_DERECHO (277) 3 45
T_DOS_PUNTOS (278)
T_DESIGUALDAD (279) 32
T_LITERAL_CARACTER (280) 53
T_LITERAL_FLOTANTE (281) 54
T_LITERAL_CADENA (282) 55
T_MODULO (283)
T_DIVISION_ENTERA (284)
T_IGUAL (285)
T_A (286)
T_DISTINTO (287)
T_DE (288)
T_OPERADOR_Y (289) 41
T_OPERADOR_O (290) 36
T_NO (291)
T_SI (292) 18
T_ENTONCES (293) 18
T_FIN (294) 3 18 19 20 21 22 24 25 26
T_SINO (295)
T_CASO (296) 19
T_MIENTRAS (297) 20 26
T_HAGA (298)
T_EJECUTE (299) 20 21 24 25
T_REPETIR (300) 22
T_INFINITAS (301)
T_VECES (302)
T_PARA (303) 21 25
T_DESDE (304) 24
T_REPITA (305) 24 26
T_CADA (306) 25
T_EN (307) 5 25
T_FUNCION (308) 3
T_HASTA (309) 21 24
T_RETORNA (310)
T_RETORNAR (311)
T_UTILIZAR (312) 5
T_COMO (313) 5
T_LITERAL_NUMERICA (314) 52
T_DEFINIR (315)
T_VERDADERO (316) 49
T_FALSO (317) 50


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
programa (64)
    on left: 1, on right: 0
declaracion_funciones (65)
    on left: 2 3, on right: 1
declaracion_sensores_motores (66)
    on left: 4 5, on right: 1
instrucciones (67)
    on left: 6 7, on right: 1 7 18 20 21 22 24 25
instruccion (68)
    on left: 8 9 10 11 12 13 14 15 16, on right: 7 26
instruccion_si (69)
    on left: 18, on right: 8
$@1 (70)
    on left: 17, on right: 18
instruccion_caso (71)
    on left: 19, on right: 9
instruccion_mientras (72)
    on left: 20, on right: 10
instruccion_para (73)
    on left: 21, on right: 11
instruccion_repetir (74)
    on left: 22, on right: 12
instruccion_asignacion (75)
    on left: 23, on right: 13 21
instruccion_repita_desde (76)
    on left: 24, on right: 14
instruccion_para_cada (77)
    on left: 25, on right: 15
instruccion_repita (78)
    on left: 26, on right: 16
relacionales (79)
    on left: 27 28 29 30 31 32 33, on right: 18 20 21 22 23 24 25 26
    27 28 29 30 31 32 45
expresiones (80)
    on left: 34 35 36 37 38, on right: 27 28 29 30 31 32 33 34 35 36
    37
factores (81)
    on left: 39 40 41 42 43 44, on right: 34 35 36 37 38 39 40 41 42
    43
terminales (82)
    on left: 45 46 47, on right: 39 40 41 42 43 44
id_variable (83)
    on left: 48, on right: 3 5 23 47
literal_booleana (84)
    on left: 49 50, on right: 51
literales (85)
    on left: 51 52 53 54 55, on right: 46


state 0

    0 $accept: . programa $end

    T_UTILIZAR  shift, and go to state 1

    $default  reduce using rule 4 (declaracion_sensores_motores)

    programa                      go to state 2
    declaracion_sensores_motores  go to state 3


state 1

    5 declaracion_sensores_motores: T_UTILIZAR . id_variable T_COMO id_variable T_EN id_variable

    T_IDENTIFICADOR  shift, and go to state 4

    id_variable  go to state 5


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 6


state 3

    1 programa: declaracion_sensores_motores . declaracion_funciones instrucciones

    T_FUNCION  shift, and go to state 7

    $default  reduce using rule 2 (declaracion_funciones)

    declaracion_funciones  go to state 8


state 4

   48 id_variable: T_IDENTIFICADOR .

    $default  reduce using rule 48 (id_variable)


state 5

    5 declaracion_sensores_motores: T_UTILIZAR id_variable . T_COMO id_variable T_EN id_variable

    T_COMO  shift, and go to state 9


state 6

    0 $accept: programa $end .

    $default  accept


state 7

    3 declaracion_funciones: T_FUNCION . id_variable T_PARENTESIS_IZQUIERDO T_PARENTESIS_DERECHO T_FIN T_FUNCION

    T_IDENTIFICADOR  shift, and go to state 4

    id_variable  go to state 10


state 8

    1 programa: declaracion_sensores_motores declaracion_funciones . instrucciones

    T_IDENTIFICADOR  shift, and go to state 4
    T_SI             shift, and go to state 11
    T_CASO           shift, and go to state 12
    T_MIENTRAS       shift, and go to state 13
    T_REPETIR        shift, and go to state 14
    T_PARA           shift, and go to state 15
    T_REPITA         shift, and go to state 16

    $default  reduce using rule 6 (instrucciones)

    instrucciones             go to state 17
    instruccion               go to state 18
    instruccion_si            go to state 19
    instruccion_caso          go to state 20
    instruccion_mientras      go to state 21
    instruccion_para          go to state 22
    instruccion_repetir       go to state 23
    instruccion_asignacion    go to state 24
    instruccion_repita_desde  go to state 25
    instruccion_para_cada     go to state 26
    instruccion_repita        go to state 27
    id_variable               go to state 28


state 9

    5 declaracion_sensores_motores: T_UTILIZAR id_variable T_COMO . id_variable T_EN id_variable

    T_IDENTIFICADOR  shift, and go to state 4

    id_variable  go to state 29


state 10

    3 declaracion_funciones: T_FUNCION id_variable . T_PARENTESIS_IZQUIERDO T_PARENTESIS_DERECHO T_FIN T_FUNCION

    T_PARENTESIS_IZQUIERDO  shift, and go to state 30


state 11

   18 instruccion_si: T_SI . relacionales $@1 T_ENTONCES instrucciones T_FIN T_SI

    T_IDENTIFICADOR         shift, and go to state 4
    T_PARENTESIS_IZQUIERDO  shift, and go to state 31
    T_LITERAL_CARACTER      shift, and go to state 32
    T_LITERAL_FLOTANTE      shift, and go to state 33
    T_LITERAL_CADENA        shift, and go to state 34
    T_LITERAL_NUMERICA      shift, and go to state 35
    T_VERDADERO             shift, and go to state 36
    T_FALSO                 shift, and go to state 37

    relacionales      go to state 38
    expresiones       go to state 39
    factores          go to state 40
    terminales        go to state 41
    id_variable       go to state 42
    literal_booleana  go to state 43
    literales         go to state 44


state 12

   19 instruccion_caso: T_CASO . T_FIN T_CASO

    T_FIN  shift, and go to state 45


state 13

   20 instruccion_mientras: T_MIENTRAS . relacionales T_EJECUTE instrucciones T_FIN T_MIENTRAS

    T_IDENTIFICADOR         shift, and go to state 4
    T_PARENTESIS_IZQUIERDO  shift, and go to state 31
    T_LITERAL_CARACTER      shift, and go to state 32
    T_LITERAL_FLOTANTE      shift, and go to state 33
    T_LITERAL_CADENA        shift, and go to state 34
    T_LITERAL_NUMERICA      shift, and go to state 35
    T_VERDADERO             shift, and go to state 36
    T_FALSO                 shift, and go to state 37

    relacionales      go to state 46
    expresiones       go to state 39
    factores          go to state 40
    terminales        go to state 41
    id_variable       go to state 42
    literal_booleana  go to state 43
    literales         go to state 44


state 14

   22 instruccion_repetir: T_REPETIR . relacionales instrucciones T_FIN T_REPETIR

    T_IDENTIFICADOR         shift, and go to state 4
    T_PARENTESIS_IZQUIERDO  shift, and go to state 31
    T_LITERAL_CARACTER      shift, and go to state 32
    T_LITERAL_FLOTANTE      shift, and go to state 33
    T_LITERAL_CADENA        shift, and go to state 34
    T_LITERAL_NUMERICA      shift, and go to state 35
    T_VERDADERO             shift, and go to state 36
    T_FALSO                 shift, and go to state 37

    relacionales      go to state 47
    expresiones       go to state 39
    factores          go to state 40
    terminales        go to state 41
    id_variable       go to state 42
    literal_booleana  go to state 43
    literales         go to state 44


state 15

   21 instruccion_para: T_PARA . instruccion_asignacion T_HASTA relacionales T_EJECUTE instrucciones T_FIN T_PARA
   25 instruccion_para_cada: T_PARA . T_CADA relacionales T_EN relacionales T_EJECUTE instrucciones T_FIN T_PARA T_CADA

    T_IDENTIFICADOR  shift, and go to state 4
    T_CADA           shift, and go to state 48

    instruccion_asignacion  go to state 49
    id_variable             go to state 28


state 16

   24 instruccion_repita_desde: T_REPITA . T_DESDE relacionales T_HASTA relacionales T_EJECUTE instrucciones T_FIN T_REPITA
   26 instruccion_repita: T_REPITA . instruccion T_MIENTRAS relacionales T_FIN T_REPITA

    T_IDENTIFICADOR  shift, and go to state 4
    T_SI             shift, and go to state 11
    T_CASO           shift, and go to state 12
    T_MIENTRAS       shift, and go to state 13
    T_REPETIR        shift, and go to state 14
    T_PARA           shift, and go to state 15
    T_DESDE          shift, and go to state 50
    T_REPITA         shift, and go to state 16

    instruccion               go to state 51
    instruccion_si            go to state 19
    instruccion_caso          go to state 20
    instruccion_mientras      go to state 21
    instruccion_para          go to state 22
    instruccion_repetir       go to state 23
    instruccion_asignacion    go to state 24
    instruccion_repita_desde  go to state 25
    instruccion_para_cada     go to state 26
    instruccion_repita        go to state 27
    id_variable               go to state 28


state 17

    1 programa: declaracion_sensores_motores declaracion_funciones instrucciones .

    $default  reduce using rule 1 (programa)


state 18

    7 instrucciones: instruccion . instrucciones

    T_IDENTIFICADOR  shift, and go to state 4
    T_SI             shift, and go to state 11
    T_CASO           shift, and go to state 12
    T_MIENTRAS       shift, and go to state 13
    T_REPETIR        shift, and go to state 14
    T_PARA           shift, and go to state 15
    T_REPITA         shift, and go to state 16

    $default  reduce using rule 6 (instrucciones)

    instrucciones             go to state 52
    instruccion               go to state 18
    instruccion_si            go to state 19
    instruccion_caso          go to state 20
    instruccion_mientras      go to state 21
    instruccion_para          go to state 22
    instruccion_repetir       go to state 23
    instruccion_asignacion    go to state 24
    instruccion_repita_desde  go to state 25
    instruccion_para_cada     go to state 26
    instruccion_repita        go to state 27
    id_variable               go to state 28


state 19

    8 instruccion: instruccion_si .

    $default  reduce using rule 8 (instruccion)


state 20

    9 instruccion: instruccion_caso .

    $default  reduce using rule 9 (instruccion)


state 21

   10 instruccion: instruccion_mientras .

    $default  reduce using rule 10 (instruccion)


state 22

   11 instruccion: instruccion_para .

    $default  reduce using rule 11 (instruccion)


state 23

   12 instruccion: instruccion_repetir .

    $default  reduce using rule 12 (instruccion)


state 24

   13 instruccion: instruccion_asignacion .

    $default  reduce using rule 13 (instruccion)


state 25

   14 instruccion: instruccion_repita_desde .

    $default  reduce using rule 14 (instruccion)


state 26

   15 instruccion: instruccion_para_cada .

    $default  reduce using rule 15 (instruccion)


state 27

   16 instruccion: instruccion_repita .

    $default  reduce using rule 16 (instruccion)


state 28

   23 instruccion_asignacion: id_variable . T_SIMBOLO_IGUAL relacionales

    T_SIMBOLO_IGUAL  shift, and go to state 53


state 29

    5 declaracion_sensores_motores: T_UTILIZAR id_variable T_COMO id_variable . T_EN id_variable

    T_EN  shift, and go to state 54


state 30

    3 declaracion_funciones: T_FUNCION id_variable T_PARENTESIS_IZQUIERDO . T_PARENTESIS_DERECHO T_FIN T_FUNCION

    T_PARENTESIS_DERECHO  shift, and go to state 55


state 31

   45 terminales: T_PARENTESIS_IZQUIERDO . relacionales T_PARENTESIS_DERECHO

    T_IDENTIFICADOR         shift, and go to state 4
    T_PARENTESIS_IZQUIERDO  shift, and go to state 31
    T_LITERAL_CARACTER      shift, and go to state 32
    T_LITERAL_FLOTANTE      shift, and go to state 33
    T_LITERAL_CADENA        shift, and go to state 34
    T_LITERAL_NUMERICA      shift, and go to state 35
    T_VERDADERO             shift, and go to state 36
    T_FALSO                 shift, and go to state 37

    relacionales      go to state 56
    expresiones       go to state 39
    factores          go to state 40
    terminales        go to state 41
    id_variable       go to state 42
    literal_booleana  go to state 43
    literales         go to state 44


state 32

   53 literales: T_LITERAL_CARACTER .

    $default  reduce using rule 53 (literales)


state 33

   54 literales: T_LITERAL_FLOTANTE .

    $default  reduce using rule 54 (literales)


state 34

   55 literales: T_LITERAL_CADENA .

    $default  reduce using rule 55 (literales)


state 35

   52 literales: T_LITERAL_NUMERICA .

    $default  reduce using rule 52 (literales)


state 36

   49 literal_booleana: T_VERDADERO .

    $default  reduce using rule 49 (literal_booleana)


state 37

   50 literal_booleana: T_FALSO .

    $default  reduce using rule 50 (literal_booleana)


state 38

   18 instruccion_si: T_SI relacionales . $@1 T_ENTONCES instrucciones T_FIN T_SI
   27 relacionales: relacionales . T_MENOR expresiones
   28             | relacionales . T_MAYOR expresiones
   29             | relacionales . T_MAYOR_IGUAL expresiones
   30             | relacionales . T_MENOR_IGUAL expresiones
   31             | relacionales . T_IGUALDAD expresiones
   32             | relacionales . T_DESIGUALDAD expresiones

    T_MAYOR_IGUAL  shift, and go to state 57
    T_MENOR_IGUAL  shift, and go to state 58
    T_MENOR        shift, and go to state 59
    T_MAYOR        shift, and go to state 60
    T_IGUALDAD     shift, and go to state 61
    T_DESIGUALDAD  shift, and go to state 62

    $default  reduce using rule 17 ($@1)

    $@1  go to state 63


state 39

   33 relacionales: expresiones .
   34 expresiones: expresiones . T_SUMA factores
   35            | expresiones . T_RESTA factores
   36            | expresiones . T_OPERADOR_O factores
   37            | expresiones . T_SIMBOLO_OPERADOR_O factores

    T_SUMA                shift, and go to state 64
    T_RESTA               shift, and go to state 65
    T_SIMBOLO_OPERADOR_O  shift, and go to state 66
    T_OPERADOR_O          shift, and go to state 67

    $default  reduce using rule 33 (relacionales)


state 40

   38 expresiones: factores .
   39 factores: factores . T_MULTIPLICACION terminales
   40         | factores . T_DIVISION terminales
   41         | factores . T_OPERADOR_Y terminales
   42         | factores . T_SIMBOLO_OPERADOR_Y terminales
   43         | factores . T_SIMBOLO_MODULO terminales

    T_MULTIPLICACION      shift, and go to state 68
    T_DIVISION            shift, and go to state 69
    T_SIMBOLO_MODULO      shift, and go to state 70
    T_SIMBOLO_OPERADOR_Y  shift, and go to state 71
    T_OPERADOR_Y          shift, and go to state 72

    $default  reduce using rule 38 (expresiones)


state 41

   44 factores: terminales .

    $default  reduce using rule 44 (factores)


state 42

   47 terminales: id_variable .

    $default  reduce using rule 47 (terminales)


state 43

   51 literales: literal_booleana .

    $default  reduce using rule 51 (literales)


state 44

   46 terminales: literales .

    $default  reduce using rule 46 (terminales)


state 45

   19 instruccion_caso: T_CASO T_FIN . T_CASO

    T_CASO  shift, and go to state 73


state 46

   20 instruccion_mientras: T_MIENTRAS relacionales . T_EJECUTE instrucciones T_FIN T_MIENTRAS
   27 relacionales: relacionales . T_MENOR expresiones
   28             | relacionales . T_MAYOR expresiones
   29             | relacionales . T_MAYOR_IGUAL expresiones
   30             | relacionales . T_MENOR_IGUAL expresiones
   31             | relacionales . T_IGUALDAD expresiones
   32             | relacionales . T_DESIGUALDAD expresiones

    T_MAYOR_IGUAL  shift, and go to state 57
    T_MENOR_IGUAL  shift, and go to state 58
    T_MENOR        shift, and go to state 59
    T_MAYOR        shift, and go to state 60
    T_IGUALDAD     shift, and go to state 61
    T_DESIGUALDAD  shift, and go to state 62
    T_EJECUTE      shift, and go to state 74


state 47

   22 instruccion_repetir: T_REPETIR relacionales . instrucciones T_FIN T_REPETIR
   27 relacionales: relacionales . T_MENOR expresiones
   28             | relacionales . T_MAYOR expresiones
   29             | relacionales . T_MAYOR_IGUAL expresiones
   30             | relacionales . T_MENOR_IGUAL expresiones
   31             | relacionales . T_IGUALDAD expresiones
   32             | relacionales . T_DESIGUALDAD expresiones

    T_IDENTIFICADOR  shift, and go to state 4
    T_MAYOR_IGUAL    shift, and go to state 57
    T_MENOR_IGUAL    shift, and go to state 58
    T_MENOR          shift, and go to state 59
    T_MAYOR          shift, and go to state 60
    T_IGUALDAD       shift, and go to state 61
    T_DESIGUALDAD    shift, and go to state 62
    T_SI             shift, and go to state 11
    T_CASO           shift, and go to state 12
    T_MIENTRAS       shift, and go to state 13
    T_REPETIR        shift, and go to state 14
    T_PARA           shift, and go to state 15
    T_REPITA         shift, and go to state 16

    $default  reduce using rule 6 (instrucciones)

    instrucciones             go to state 75
    instruccion               go to state 18
    instruccion_si            go to state 19
    instruccion_caso          go to state 20
    instruccion_mientras      go to state 21
    instruccion_para          go to state 22
    instruccion_repetir       go to state 23
    instruccion_asignacion    go to state 24
    instruccion_repita_desde  go to state 25
    instruccion_para_cada     go to state 26
    instruccion_repita        go to state 27
    id_variable               go to state 28


state 48

   25 instruccion_para_cada: T_PARA T_CADA . relacionales T_EN relacionales T_EJECUTE instrucciones T_FIN T_PARA T_CADA

    T_IDENTIFICADOR         shift, and go to state 4
    T_PARENTESIS_IZQUIERDO  shift, and go to state 31
    T_LITERAL_CARACTER      shift, and go to state 32
    T_LITERAL_FLOTANTE      shift, and go to state 33
    T_LITERAL_CADENA        shift, and go to state 34
    T_LITERAL_NUMERICA      shift, and go to state 35
    T_VERDADERO             shift, and go to state 36
    T_FALSO                 shift, and go to state 37

    relacionales      go to state 76
    expresiones       go to state 39
    factores          go to state 40
    terminales        go to state 41
    id_variable       go to state 42
    literal_booleana  go to state 43
    literales         go to state 44


state 49

   21 instruccion_para: T_PARA instruccion_asignacion . T_HASTA relacionales T_EJECUTE instrucciones T_FIN T_PARA

    T_HASTA  shift, and go to state 77


state 50

   24 instruccion_repita_desde: T_REPITA T_DESDE . relacionales T_HASTA relacionales T_EJECUTE instrucciones T_FIN T_REPITA

    T_IDENTIFICADOR         shift, and go to state 4
    T_PARENTESIS_IZQUIERDO  shift, and go to state 31
    T_LITERAL_CARACTER      shift, and go to state 32
    T_LITERAL_FLOTANTE      shift, and go to state 33
    T_LITERAL_CADENA        shift, and go to state 34
    T_LITERAL_NUMERICA      shift, and go to state 35
    T_VERDADERO             shift, and go to state 36
    T_FALSO                 shift, and go to state 37

    relacionales      go to state 78
    expresiones       go to state 39
    factores          go to state 40
    terminales        go to state 41
    id_variable       go to state 42
    literal_booleana  go to state 43
    literales         go to state 44


state 51

   26 instruccion_repita: T_REPITA instruccion . T_MIENTRAS relacionales T_FIN T_REPITA

    T_MIENTRAS  shift, and go to state 79


state 52

    7 instrucciones: instruccion instrucciones .

    $default  reduce using rule 7 (instrucciones)


state 53

   23 instruccion_asignacion: id_variable T_SIMBOLO_IGUAL . relacionales

    T_IDENTIFICADOR         shift, and go to state 4
    T_PARENTESIS_IZQUIERDO  shift, and go to state 31
    T_LITERAL_CARACTER      shift, and go to state 32
    T_LITERAL_FLOTANTE      shift, and go to state 33
    T_LITERAL_CADENA        shift, and go to state 34
    T_LITERAL_NUMERICA      shift, and go to state 35
    T_VERDADERO             shift, and go to state 36
    T_FALSO                 shift, and go to state 37

    relacionales      go to state 80
    expresiones       go to state 39
    factores          go to state 40
    terminales        go to state 41
    id_variable       go to state 42
    literal_booleana  go to state 43
    literales         go to state 44


state 54

    5 declaracion_sensores_motores: T_UTILIZAR id_variable T_COMO id_variable T_EN . id_variable

    T_IDENTIFICADOR  shift, and go to state 4

    id_variable  go to state 81


state 55

    3 declaracion_funciones: T_FUNCION id_variable T_PARENTESIS_IZQUIERDO T_PARENTESIS_DERECHO . T_FIN T_FUNCION

    T_FIN  shift, and go to state 82


state 56

   27 relacionales: relacionales . T_MENOR expresiones
   28             | relacionales . T_MAYOR expresiones
   29             | relacionales . T_MAYOR_IGUAL expresiones
   30             | relacionales . T_MENOR_IGUAL expresiones
   31             | relacionales . T_IGUALDAD expresiones
   32             | relacionales . T_DESIGUALDAD expresiones
   45 terminales: T_PARENTESIS_IZQUIERDO relacionales . T_PARENTESIS_DERECHO

    T_MAYOR_IGUAL         shift, and go to state 57
    T_MENOR_IGUAL         shift, and go to state 58
    T_MENOR               shift, and go to state 59
    T_MAYOR               shift, and go to state 60
    T_IGUALDAD            shift, and go to state 61
    T_PARENTESIS_DERECHO  shift, and go to state 83
    T_DESIGUALDAD         shift, and go to state 62


state 57

   29 relacionales: relacionales T_MAYOR_IGUAL . expresiones

    T_IDENTIFICADOR         shift, and go to state 4
    T_PARENTESIS_IZQUIERDO  shift, and go to state 31
    T_LITERAL_CARACTER      shift, and go to state 32
    T_LITERAL_FLOTANTE      shift, and go to state 33
    T_LITERAL_CADENA        shift, and go to state 34
    T_LITERAL_NUMERICA      shift, and go to state 35
    T_VERDADERO             shift, and go to state 36
    T_FALSO                 shift, and go to state 37

    expresiones       go to state 84
    factores          go to state 40
    terminales        go to state 41
    id_variable       go to state 42
    literal_booleana  go to state 43
    literales         go to state 44


state 58

   30 relacionales: relacionales T_MENOR_IGUAL . expresiones

    T_IDENTIFICADOR         shift, and go to state 4
    T_PARENTESIS_IZQUIERDO  shift, and go to state 31
    T_LITERAL_CARACTER      shift, and go to state 32
    T_LITERAL_FLOTANTE      shift, and go to state 33
    T_LITERAL_CADENA        shift, and go to state 34
    T_LITERAL_NUMERICA      shift, and go to state 35
    T_VERDADERO             shift, and go to state 36
    T_FALSO                 shift, and go to state 37

    expresiones       go to state 85
    factores          go to state 40
    terminales        go to state 41
    id_variable       go to state 42
    literal_booleana  go to state 43
    literales         go to state 44


state 59

   27 relacionales: relacionales T_MENOR . expresiones

    T_IDENTIFICADOR         shift, and go to state 4
    T_PARENTESIS_IZQUIERDO  shift, and go to state 31
    T_LITERAL_CARACTER      shift, and go to state 32
    T_LITERAL_FLOTANTE      shift, and go to state 33
    T_LITERAL_CADENA        shift, and go to state 34
    T_LITERAL_NUMERICA      shift, and go to state 35
    T_VERDADERO             shift, and go to state 36
    T_FALSO                 shift, and go to state 37

    expresiones       go to state 86
    factores          go to state 40
    terminales        go to state 41
    id_variable       go to state 42
    literal_booleana  go to state 43
    literales         go to state 44


state 60

   28 relacionales: relacionales T_MAYOR . expresiones
